--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -7,19 +7,13 @@ toc: true
 ---
 # SSH Open Marketplace Stories
 
-
-
 The SSH Open Marketplace (SSHOMP) provides a valuable service to both researchers and infrastructure operators. It can be used in a variety of contexts, just as its users have different training backgrounds, requirements and approaches to incorporating SSHOMP into their work. On this page we present real use cases and the faces behind them.
 
 These use cases shall inspire you to think of own scenarios applying the SSHOMP reaching beyond its use as a resource sharing platform. Please get in touch with us if you have an use case in mind for the SSHOMP contributing to your research work or to your community. Let’s discuss how we could make it work.
 
 ## Lukas Weimer and the Use Case of the Association for Research Infrastructures in the Humanities and Cultural Studies: Managing own Tools and Resources using the Marketplace API
 
-
-
 ![## Lukas Weimer](/assets/cms/images/1.png)
-
-
 
 ### WHO?
 
@@ -41,3 +35,91 @@ Lukas sees the SSH Open Marketplace as a valuable tool for both infrastructure p
 - Implementing a feedback loop to notify contributors about the status of their entries (e.g., approval or rejection).
 
 These enhancements could further streamline workflows and improve user satisfaction. Lukas emphasizes the Marketplace’s potential to unify diverse institutions and their offerings, fostering collaboration and maximizing outreach. With continuous improvements, the SSH Open Marketplace can solidify its role as an indispensable resource for the research community.
+
+
+
+## [](<>)Paola Marongiu and the Use Case of creating a new CLARIN Resource Family for Lexical Semantic Change Research : Creating structured Workflows using the Marketplace
+
+### [](<>)WHO?
+
+
+
+![## Paola Marongiu](/assets/cms/images/marongiu.png)
+
+Paola Marongiu is a researcher with a background in computational linguistics, particularly in historical languages, specifically Latin. She began engaging with digital methods during her MA, which focused on converting the _[Index Thomisticus Treebank](https://itreebank.marginalia.it/)_ to Universal Dependencies. She deepened her expertise in her PhD, where she joined the _[WoPoss](https://woposs.unine.ch/)_ project activities, mainly focussing on the linguistic annotation of a selection of modal markers in a diachronic corpus of Latin literary and documentary texts. Her research experience includes corpus building, automatic annotation tools, and data analysis with Python and R. She has also worked with word embeddings to study semantic shift in Latin and is currently involved in a project on Justinian's Digest at the _[Institute of Computational Linguistics of the Italian Research Council](https://www.ilc.cnr.it/en/)_, where she is developing a bilingual glossary of legal Latin terms.
+
+### [](<>)THE CASE
+
+Paola discovered the SSH Open Marketplace through her involvement in the _[CLARIN](https://www.clarin.eu/)_-funded project ‘_[A new CLARIN Resource Family for lexical semantic change research](https://zenodo.org/records/8156200)_,’ where she worked as a research assistant. The project aimed to create a new resource family within the CLARIN infrastructure, and during the initial survey of available resources, she discovered the SSH Open Marketplace workflows. Recognizing their potential, they adapted their project model to align with these workflows. She has primarily used the SSH Open Marketplace to create structured workflows for lexical semantic change research, linking CLARIN resources to specific steps that lexicographers and researchers can follow. Notable workflows she developed include _[‘Semantic change analysis for lexicological studies’](https://marketplace.sshopencloud.eu/workflow/yStoh2)_ and _[‘Semantic change analysis for Ancient Greek lexicological studies.’](https://marketplace.sshopencloud.eu/workflow/UVbKn2)_ These workflows help guide users through the process of retrieving semantic shifts using computational tools.
+
+![A SSHOMP entry](/assets/cms/images/marongiu2.png)
+
+### [](<>)OUTLOOK
+
+Paola sees the SSH Open Marketplace as an essential resource for researchers, particularly those new to digital and computational methods. She values its extensive collection of workflows, training materials, datasets, publications, and tools, which provide step-by-step guidance for various research tasks. She highlights the platform’s search functionality as particularly beneficial for finding relevant resources efficiently. She envisions the SSH Open Marketplace continuing to serve as a bridge between different infrastructures and disciplines, fostering accessibility and collaboration in digital humanities research. She believes its structured workflows will be instrumental in helping scholars navigate complex research tasks more effectively.
+
+### [](<>)Paola’s profiles:
+
+_[https://www.researchgate.net/profile/Paola-Marongiu-2](https://www.researchgate.net/profile/Paola-Marongiu-2)_
+
+_[https://orcid.org/0000-0002-5060-3307](https://orcid.org/0000-0002-5060-3307)_
+
+_[https://x.com/paolamarongiu_](https://x.com/paolamarongiu_)_
+
+### \
+[](<>)Alex Steckel and the Use Case of Text+: Marketplace as Curation Platform and harvestable Aggregator
+
+### [](<>)WHO?
+
+
+
+![Alex Steckel](/assets/cms/images/steckel1.png)
+
+Alex Steckel is a professional dedicated to bridging the gap between researchers and digital infrastructure. While not a Digital Humanities (DH) researcher himself, he plays a crucial role in making DH tools more accessible to researchers. His work focuses on facilitating the integration of digital services into academic workflows, particularly in the context of the _[German NFDI (National Research Data Infrastructure)](https://www.nfdi.de/)_ consortium _[Text+](https://text-plus.org/)_. His expertise lies in understanding the conceptual framework of digital research tools and ensuring that researchers can easily find and utilize the resources they need.
+
+Alex first encountered the SSH Open Marketplace through a colleague, who introduced it as a European platform for cataloging relevant tools and services. As someone involved in research infrastructure, he quickly recognized its potential. Within his work at Text+, the SSH Open Marketplace has become an essential tool for presenting and distributing services. Rather than building a standalone service directory, his team leverages the SSH Open Marketplace API to harvest and _[display relevant entries on their own website](https://text-plus.org/daten-dienste/dienste/)_, effectively integrating the Marketplace as a backend service.
+
+### [](<>)THE CASE
+
+The SSH Open Marketplace provides a crucial function for Alex and his team at Text+. Instead of creating a separate catalog from scratch, which would require significant resources, they rely on the Marketplace’s existing structure and API to curate relevant tools for their research community. This integration has allowed them to efficiently list their services while ensuring greater visibility across Europe. The Marketplace acts as a central hub where researchers can discover, access, and benefit from a wide range of digital tools, making their research processes more efficient and streamlined. The ease of integration has significantly reduced their workload, requiring only about 20% of the effort compared to building an independent solution.
+
+![Text+ catalogue](/assets/cms/images/steckel2.png)
+
+### [](<>)OUTLOOK
+
+Alex is highly satisfied with the SSH Open Marketplace and appreciates its role in simplifying the dissemination of research tools. However, he sees room for improvement. Enhancing metadata features, such as displaying the last update timestamps, could improve transparency and reliability. Additionally, incorporating a rating or ranking system would help users assess the quality and relevance of listed tools. These improvements would further refine the user experience and make the Marketplace an even more valuable resource for the research community.
+
+
+
+## [](<>)Olivier Marlet and the use case of MASAplus: Resource Sharing in the Field of Archaeology
+
+![Olivier Marlet](/assets/cms/images/marlet1.png)
+
+### [](<>)WHO?
+
+Olivier Marlet is part of the Consortium-HN MASAplus, which is involved in archaeological data management and the promotion of best digital practices for sharing and reusing archaeological data. MASAplus operates within the context of Open Science and advocates for Linked Open Data in the archaeological community. MASAplus brings together various experts in digital archaeology, with a background in archiving, document management, vocabulary, spatialization, publication, and promoting data openness. They have experience in developing and supporting the tools and workflows that make up the MASAplus digital ecosystem.
+
+### [](<>)THE CASE
+
+Olivier describes their involvement with SSH Open Marketplace (SSHOMP) as a key platform for sharing resources and workflows related to their work in digital archaeology. They first learned about SSHOMP through the IR* Huma-Num Research Infrastructure, which finances the Consortium-HN program, following the recommendations of the SSK (Standardization Survival Kit) from the European Parthenos program, the project from which the idea to implement workflows in the SSHOMP began. The main purpose of using SSHOMP is to make available archaeological tools, datasets, and workflows that the consortium uses, ensuring they are structured and easy to find for others in the archaeological community.
+
+- Uses of SSHOMP:
+
+  - Resource Sharing: The consortium uses SSHOMP to share existing tools like Pactols vocabulary, Opentheso, and the CIDOC ontology.
+  - Workflow Structuring: SSHOMP is used to structure and share workflows, ensuring that these processes are documented in a way that anyone in the archaeological community can understand and reuse.
+  - Discovery and Search: The platform is also used to discover other resources or similar workflows, helping the team to learn from others and refine their own methods. They particularly focus on exploring semantic web tools, ontology development, and other archaeological-specific technologies.
+- Impact:
+
+  - Visibility and International Reach: SSHOMP offers a way for the tools and workflows created by MASAplus to gain international visibility. The existence of this platform has allowed the consortium to expand its reach and make its resources known to a larger audience.
+  - Integration of Resources: The interviewee highlights that SSHOMP makes it easy to integrate different resources with persistent identifiers (such as ARK or DOI), allowing these resources to be tracked, shared, and reused across various platforms.
+
+### [](<>)OUTLOOK
+
+Looking ahead, the interviewee envisions a continued collaboration with SSHOMP as part of their broader digital strategy. They express an interest in further developing the semantic models for describing their data and metadata in a more standardized manner, while ensuring that their workflows are cataloged in SSHOMP.
+
+- Future Plans:
+
+  - The team plans to set up a platform of semantic models (ontologies) to describe both their data and the metadata surrounding how the data is collected, analyzed, and processed. They see SSHOMP as a crucial catalog for the workflows and resources mobilized in this context.
+  - They would like to see persistent identifiers for resources and workflows in SSHOMP to support long-term accessibility and ease of integration across other research tools.
+
+The broader goal is for the Consortium-HN MASAplus digital ecosystem to grow and continue to contribute significantly to the field of archaeological data management and Open Science. The SSHOMP platform will remain central to this vision, supporting the global accessibility and sharing of their research outputs.
